Remove the unnecessarily cursor appeared in omnibox after clicking inside the 'Search box'

BUG=696894

Review-Url: https://codereview.chromium.org/2728433002
Cr-Commit-Position: refs/heads/master@{#454148}

Former-commit-id: 413ab9af7d2755e3287b07b08c21fc3be062103c