ui/views/controls/textfield/textfield_unittest.cc
@@ -3112,4 +3112,21 @@ TEST_F(TextfieldTest, AccessiblePasswordTest) {
   EXPECT_TRUE(node_data_protected.HasStateFlag(ui::AX_STATE_PROTECTED));
 }
 
+// Test if the cursor visibility is controlled by |cursor_enabled_| in
+// RenderText.
+TEST_F(TextfieldTest, CursorVisibility) {
+  InitTextfield();
+  gfx::RenderText* render_text = test_api_->GetRenderText();
+
+  render_text->SetCursorEnabled(false);
+  textfield_->OnBlur();
+  textfield_->OnFocus();
+  EXPECT_FALSE(test_api_->IsCursorVisible());
+
+  render_text->SetCursorEnabled(true);
+  textfield_->OnBlur();
+  textfield_->OnFocus();
+  EXPECT_TRUE(test_api_->IsCursorVisible());
+}
+
 }  // namespace views
